fixed bottom padding, fixed title, fixed layout dimensions.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>C M F artist</title>
+    <title>cm fredricksen</title>
     <link rel="stylesheet" href="styles/resp.css">
     <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro|Nova+Mono&display=swap" rel="stylesheet">
 
@@ -55,7 +55,7 @@
             <li><a href="https://www.galleryofplaces.com">my art</li>
             <li><a href="https://www.wintersbane.website">tech notes</a></li> 
             <li><a href="https://www.github.com/galleryofplaces">my github</a></li>  
-        </ul>
+        </ul><br>
         &copy; 2020 cmfredricksen &hearts;
     </div>
 </div>
