fixed links after adding subdomain

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="nav">
         
         <a href="https://www.wintersbane.website" class="a1">webdev</a>
-        <a href="https://www.galleryofplaces.com" class="a1">art</a>
+        <a href="http://www.art.christinefredricksen.com" class="a1">art</a>
         <a href="http://www.wikipedia.org" class="a1">more info</a>
     
        </div>    
@@ -52,7 +52,7 @@
 
     <div class="foot">
         <ul>
-            <li><a href="https://www.galleryofplaces.com">my art</li>
+            <li><a href="http://www.art.christinefredricksen.com">my art</li>
             <li><a href="https://www.wintersbane.website">tech notes</a></li> 
             <li><a href="https://www.github.com/galleryofplaces">my github</a></li>  
         </ul><br>
