working on cache

--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-148147955-1');
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cm fredricksen</title>
-    <link rel="stylesheet" href="styles/resp.css">
+    <link rel="stylesheet" href="styles/resp.css"
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Work+Sans&display=swap" rel="stylesheet">
 
 </head>
@@ -20,9 +29,9 @@
 
     <div class="nav">
         
-        <a href="https://www.wintersbane.website" class="a1">webdev</a>
-        <a href="http://www.art.christinefredricksen.com" class="a1">art</a>
-        <a href="http://www.wikipedia.org" class="a1">more info</a>
+        <a href="https://www.wintersbane.website" class="a1" target="_blank">webdev</a>
+        <a href="http://www.art.christinefredricksen.com" class="a1" target="_blank">art</a>
+        <a href="http://www.wikipedia.org" class="a1" target="_blank">more info</a>
     
        </div>    
 
@@ -48,9 +57,9 @@
 
     <div class="foot">
         <ul>
-            <li><a href="http://www.art.christinefredricksen.com">my art</li>
-            <li><a href="https://www.wintersbane.website">tech notes</a></li> 
-            <li><a href="https://www.github.com/galleryofplaces">my github</a></li>  
+            <li><a href="http://www.art.christinefredricksen.com" target="_blank">my art</li>
+            <li><a href="https://www.wintersbane.website" target="_blank">tech notes</a></li> 
+            <li><a href="https://www.github.com/galleryofplaces" target="_blank">my github</a></li>  
         </ul><br>
        <p class="copy"> &copy; 2020 cmfredricksen &hearts;</p>
     </div>
