fixed link to dev

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <div class="nav">
         
-        <a href="https://www.wintersbane.website" class="a1" target="_blank">webdev</a>
+        <a href="https://www.dev.christinefredricksen.com" class="a1" target="_blank">webdev</a>
         <a href="http://www.art.christinefredricksen.com" class="a1" target="_blank">art</a>
         <a href="http://www.wikipedia.org" class="a1" target="_blank">more info</a>
     
@@ -63,7 +63,7 @@
     <div class="foot">
         <ul>
             <li><a href="http://www.art.christinefredricksen.com" target="_blank">my art</li>
-            <li><a href="https://www.wintersbane.website" target="_blank">tech notes</a></li> 
+            <li><a href="https://www.dev.christinefredricksen.com" target="_blank">web dev</a></li> 
             <li><a href="https://www.github.com/galleryofplaces" target="_blank">my github</a></li>  
         </ul><br>
        <p class="copy"> &copy; 2020 cmfredricksen &hearts;</p>
